màj après mentorat : Correction faite pour la version desktop. Problèmes : Mobile = A refaire. | La totalité des dimensions est à refaire : Je pense avoir compris comment faire, c'est surtout une histoire de %age et de vmh ou qq chose du genre. Ne pas hésiter à retirer les padding & autres margin pour revoir la width & la height. Fin de la correction FicheLogement, ou presque ! : Il faut que je m'occupe des dropdown (dans Collapse & FicheLogement).

--- a/kasa/src/scss/Caroussel.scss
+++ b/kasa/src/scss/Caroussel.scss
@@ -13,8 +13,8 @@
   .caroussel {
       cursor: pointer;
       margin-top: 3.5em;
-      width: 90vw;
-      padding-left: 7em;
+      width: 100vw;
+      padding-left: 0em;
     //display: flex;
     //align-items: center;
     //justify-content: space-between;
