--- a/kasa/src/scss/Header.scss
+++ b/kasa/src/scss/Header.scss
@@ -22,7 +22,7 @@ header {
     width: 100%;
     height: auto;
     padding-top: 3vw; /* Utilisation de vw pour un padding relatif */
-    padding-left: 4vw; /* Anciennement 5vw; Utilisation de vw pour un padding relatif */
+    padding-left: 3vw; /* Anciennement 5vw; Utilisation de vw pour un padding relatif */
 
     .container {
         display: flex;
@@ -42,7 +42,7 @@ header {
     nav {
         width: auto;
         padding-top: 4vh; /* Utilisation de vh pour un padding relatif */
-        padding-right: 10vw; /* Utilisation de vw pour un padding relatif */
+        padding-right: 3vw; /* Utilisation de vw pour un padding relatif */
     }
 }
 
